--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.4.1",
+    "d3": "^5.5.0",
+    "d3-sankey": "^0.7.1",
     "electron": "^1.7.9",
     "ngx-electron": "^1.0.3",
     "rxjs": "^6.2.0",
@@ -35,6 +37,8 @@
     "@angular/cli": "^6.0.3",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@types/d3": "^5.0.0",
+    "@types/d3-sankey": "^0.7.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
